--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "main": "index.js",
   "scripts": {
     "start": "cross-env NODE_ENV=production node ./bin/server.js",
-    "start:dev": "cross-env NODE_ENV=development nodemon ./bin/server.js",
-    "vercel-build": "echo hello"
+    "start:dev": "cross-env NODE_ENV=development nodemon ./bin/server.js"
   },
   "repository": {
     "type": "git",
